# fastapi-rest

./: .gitignore  CHANGELOG.md  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
examples/: main.py  models.py  resources.py
fastapi_rest/: exceptions.py  pagination.py  resource.py
tests/: test_views.py
