[tool.poetry]
name = "fastapi-rest"
version = "0.1.1"
description = "Fast restful API based on FastAPI and TortoiseORM"
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache2.0"
documentation = "https://github.com/long2ice/fastapi-rest"
homepage = "https://github.com/long2ice/fastapi-rest"
include = ["LICENSE", "README.md", "CHANGELOG.md", ]
keywords = ["fastapi", "restful", "tortoise-orm"]
packages = [
    { include = "fastapi_rest" },
]
readme = "README.md"
repository = "https://github.com/long2ice/fastapi-rest.git"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "*"
tortoise-orm = "*"

[tool.poetry.dev-dependencies]
# examples
uvicorn = "*"
asyncmy = "*"
# test
requests = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-sugar = "*"
# lint
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
